// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`p6-action disabled has a "disabled" attribute on the button when disabled is true 1`] = `
<p6-action aria-disabled="true" disabled="true">
  <mock:shadow-root>
    <button disabled="" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-action>
`;

exports[`p6-action disabled has no "disabled" attribute on the button when disabled is false 1`] = `
<p6-action disabled="false">
  <mock:shadow-root>
    <button type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-action>
`;

exports[`p6-action mode does not add class when mode is default 1`] = `
<p6-action mode="2">
  <mock:shadow-root>
    <button type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-action>
`;

exports[`p6-action mode does not add class when mode is undefined 1`] = `
<p6-action mode="undefined">
  <mock:shadow-root>
    <button type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-action>
`;

exports[`p6-action mode has the class "is-danger" when mode is "0" 1`] = `
<p6-action mode="0">
  <mock:shadow-root>
    <button class="is-danger" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-action>
`;

exports[`p6-action mode has the class "is-default" when mode is "2" 1`] = `
<p6-action mode="2">
  <mock:shadow-root>
    <button type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-action>
`;

exports[`p6-action mode has the class "is-info" when mode is "3" 1`] = `
<p6-action mode="3">
  <mock:shadow-root>
    <button class="is-info" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-action>
`;

exports[`p6-action mode has the class "is-primary" when mode is "5" 1`] = `
<p6-action mode="5">
  <mock:shadow-root>
    <button class="is-primary" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-action>
`;

exports[`p6-action mode has the class "is-success" when mode is "4" 1`] = `
<p6-action mode="4">
  <mock:shadow-root>
    <button class="is-success" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-action>
`;

exports[`p6-action mode has the class "is-warning" when mode is "1" 1`] = `
<p6-action mode="1">
  <mock:shadow-root>
    <button class="is-warning" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-action>
`;

exports[`p6-action size does not add class when size is normal 1`] = `
<p6-action size="1">
  <mock:shadow-root>
    <button type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-action>
`;

exports[`p6-action size has the class "is-normal" when size is "1" 1`] = `
<p6-action size="1">
  <mock:shadow-root>
    <button type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-action>
`;

exports[`p6-action size has the class "is-small" when size is "0" 1`] = `
<p6-action size="0">
  <mock:shadow-root>
    <button class="is-small" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-action>
`;

exports[`p6-action waiting has a "is-loading" class when waiting is true 1`] = `
<p6-action waiting="true">
  <mock:shadow-root>
    <button class="is-loading" type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-action>
`;

exports[`p6-action waiting has no "is-loading" class when waiting is false 1`] = `
<p6-action waiting="false">
  <mock:shadow-root>
    <button type="button">
      <slot></slot>
    </button>
  </mock:shadow-root>
</p6-action>
`;
